<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/character1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imgCharacter1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/display_a_character"
                android:src="@drawable/_amber" />
            <TextView
                android:id="@+id/tvCharacter1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_1"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/character2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imgCharacter2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/display_a_character"
                android:src="@drawable/_amber"/>
            <TextView
                android:id="@+id/tvCharacter2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_2"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/character3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imgCharacter3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/display_a_character"
                android:src="@drawable/_amber"/>
            <TextView
                android:id="@+id/tvCharacter3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_3"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>